# HinaPE-CubbyFlow

./: .gitignore  CMakeLists.txt  HinaPE-CubbyFlow.hipnc  README.md
CubbyFlow/Builds/CMake/: FindTBB.cmake
HinaPE-hdk/: CMakeLists.txt  Entrance.cpp  Fluid.hipnc  HinaHDKClassGenerator.h  HinaPE-hdk.hipnc  Smoke.hipnc
HinaPE-hdk/Collider/: SIM_Hina_RigidBodyCollider.cpp  SIM_Hina_RigidBodyCollider.h
HinaPE-hdk/Emitter/: GAS_Hina_VolumeGridEmitter.cpp  GAS_Hina_VolumeGridEmitter.h  GAS_Hina_VolumeParticleEmittter.cpp  GAS_Hina_VolumeParticleEmittter.h
HinaPE-hdk/Geometry/: SIM_Hina_Box.cpp  SIM_Hina_Box.h  SIM_Hina_Plane.cpp  SIM_Hina_Plane.h  SIM_Hina_Sphere.cpp  SIM_Hina_Sphere.h
HinaPE-hdk/Grid/: SIM_Hina_ConfigureForSmoke.cpp  SIM_Hina_ConfigureForSmoke.h  SIM_Hina_Grid.cpp  SIM_Hina_Grid.h  SIM_Hina_GridFluidData.cpp  SIM_Hina_GridFluidData.h
HinaPE-hdk/Particle/: GAS_Hina_CommitAllCaches.cpp  GAS_Hina_CommitAllCaches.h  GAS_Hina_ConfigureForSPH.cpp  GAS_Hina_ConfigureForSPH.h  SIM_Hina_ConfigureForSPH.cpp  SIM_Hina_ConfigureForSPH.h  SIM_Hina_PCISPHCaches.cpp  SIM_Hina_PCISPHCaches.h  SIM_Hina_ParticleFluidData.cpp  SIM_Hina_ParticleFluidData.h  SIM_Hina_SPHCaches.cpp  SIM_Hina_SPHCaches.h
HinaPE-hdk/Solver/Advection/: GAS_Hina_CubicSemiLagrangian.cpp  GAS_Hina_CubicSemiLagrangian.h  GAS_Hina_SemiLagrangian.cpp
HinaPE-hdk/Solver/Collision/: GAS_Hina_CollisionSolve.cpp
HinaPE-hdk/Solver/Density/: GAS_Hina_UpdateDensity.cpp  GAS_Hina_UpdateDensity.h
HinaPE-hdk/Solver/Force/: GAS_Hina_ClearForce.cpp  GAS_Hina_GravityForce.cpp
HinaPE-hdk/Solver/Neighbor/: GAS_Hina_UpdateNeighbor.cpp  GAS_Hina_UpdateNeighbor.h
HinaPE-hdk/Solver/Pressure/: GAS_Hina_PCISPHPressure.cpp  GAS_Hina_PCISPHPressure.h  GAS_Hina_SPHPressure.cpp
HinaPE-hdk/Solver/TimeIntegrate/: GAS_Hina_ComputeSubsteps.cpp  GAS_Hina_ComputeSubsteps.h  GAS_Hina_SemiImplicitEuler.cpp  GAS_Hina_SemiImplicitEuler.h  GAS_Hina_SubStep.cpp  GAS_Hina_SubStep.h
HinaPE-hdk/Solver/Viscosity/: GAS_Hina_PseudoViscosity.cpp  GAS_Hina_PseudoViscosity.h  GAS_Hina_Viscosity.cpp  GAS_Hina_Viscosity.h
HinaPE-hdk/_GroundTruth/FLIP/: GAS_CF_ConfigureFLIPData.cpp  GAS_CF_FLIPSolver.cpp
HinaPE-hdk/_GroundTruth/PCISPH/: GAS_GT_PCISPHSolver.cpp  GAS_GT_PCISPHSolver.h
HinaPE-hdk/_GroundTruth/PIC/: GAS_GT_PICSolver.cpp  GAS_GT_PICSolver.h
HinaPE-hdk/_GroundTruth/SMOKE/: GAS_GT_SmokeSolver.cpp  GAS_GT_SmokeSolver.h
HinaPE-hdk/_GroundTruth/SPH/: GAS_GT_SPHSolver.cpp  GAS_GT_SPHSolver.h
hdk/: CubbyHDKClassGenerator.h  Entrance.cpp  GAS_TEST_GENERATED_SOLVER.cpp  GAS_TEST_GENERATED_SOLVER.h  HOW_TO_USE_GENERATOR.cpp  HOW_TO_USE_GENERATOR.h  SIM_CF_ParticleSystemData.cpp  SIM_CF_ParticleSystemData.h
hdk-legacy/: CMakeLists.txt
hdk-legacy/Collider/: GAS_CF_ConfigureRigidBodyCollider.cpp  GAS_CF_UpdateCollider.cpp  SIM_CF_RigidBodyCollider.cpp  SIM_CF_RigidBodyCollider.h
hdk-legacy/Emitter/: GAS_CF_PointEmitter.cpp  GAS_CF_PointEmitter.h  GAS_CF_VolumeParticleEmitter.h
hdk-legacy/Geometry/: SIM_CF_Box.h  SIM_CF_Plane.cpp  SIM_CF_Sphere.h
hdk-legacy/Particle/: GAS_CF_CommitCache.cpp  GAS_CF_CommitCache.h
hdk-legacy/Particle/PCISPHSystemData/: GAS_CF_ConfigurePCISPHSystemData.cpp  SIM_CF_PCISPHSystemData.h
hdk-legacy/Particle/ParticleSystemData/: SIM_CF_ParticleSystemData.h
hdk-legacy/Particle/SPHSystemData/: GAS_CF_ConfigureSPHSystemData.h  SIM_CF_SPHSystemData.h
hdk-legacy/Solver/Advection/: GAS_CF_SemiLagrangianAdvector.cpp  GAS_CF_SemiLagrangianAdvector.h  GAS_CF_Semi_Implicit_Euler.cpp
hdk-legacy/Solver/Collision/: GAS_CF_CollisionSolver.h
hdk-legacy/Solver/Force/: GAS_CF_ActivateGravityForce.cpp  GAS_CF_ActivateGravityForce.h  GAS_CF_ClearForce.cpp  GAS_CF_ClearForce.h
hdk-legacy/Solver/Neighbor/: GAS_CF_BuildNeighborLists.cpp  GAS_CF_BuildNeighborLists.h  GAS_CF_ReadNeighborLists.cpp
hdk-legacy/Solver/Pressure/: GAS_CF_PCISPHPressureForceSolver.cpp  GAS_CF_PCISPHPressureForceSolver.h  GAS_CF_PressureForceSolver.cpp  GAS_CF_PressureForceSolver.h
hdk-legacy/Solver/Viscosity/: GAS_CF_PseudoViscosityForceSolver.cpp  GAS_CF_PseudoViscosityForceSolver.h  GAS_CF_ViscosityForceSolver.cpp
hdk/Collider/: GAS_CF_ConfigureRigidBodyCollider.cpp  GAS_CF_ConfigureRigidBodyCollider.h  GAS_CF_UpdateCollider.cpp  GAS_CF_UpdateCollider.h  GAS_CL_UpdateCollider.cpp  GAS_CL_UpdateCollider.h  SIM_CF_RigidBodyCollider.cpp  SIM_CF_RigidBodyCollider.h
hdk/Emitter/: GAS_CF_PointEmitter.cpp  GAS_CF_PointEmitter.h  GAS_CF_VolumeParticleEmitter.cpp  GAS_CF_VolumeParticleEmitter.h
hdk/Geometry/: SIM_CF_Box.cpp  SIM_CF_Box.h  SIM_CF_Plane.cpp  SIM_CF_Plane.h  SIM_CF_Sphere.cpp  SIM_CF_Sphere.h
hdk/Particle/: GAS_CF_CommitCache.cpp  GAS_CF_ConfigureParticleSystemData.cpp  GAS_CF_ConfigureParticleSystemData.h  GAS_CF_ConfigureSPHSystemData.cpp  GAS_CF_ConfigureSPHSystemData.h  GAS_CF_UpdateToGeometrySheet.cpp  GAS_CF_UpdateToGeometrySheet.h  SIM_CF_ParticleSystemData.cpp  SIM_CF_ParticleSystemData.h  SIM_CF_SPHSystemData.cpp  SIM_CF_SPHSystemData.h
hdk/Particle/PCISPHSystemData/: GAS_CF_ConfigurePCISPHSystemData.cpp  GAS_CF_ConfigurePCISPHSystemData.h  SIM_CF_PCISPHSystemData.cpp  SIM_CF_PCISPHSystemData.h
hdk/Particle/ParticleSystemData/: GAS_CF_ConfigureParticleSystemData.cpp
hdk/Particle/SPHSystemData/: GAS_CF_ConfigureSPHSystemData.cpp  SIM_CF_SPHSystemData.cpp  SIM_CF_SPHSystemData.h
hdk/Solver/Advection/: GAS_CF_SemiLagrangianAdvector.cpp  GAS_CF_Semi_Implicit_Euler.cpp  GAS_CF_Semi_Implicit_Euler.h
hdk/Solver/Collision/: GAS_CF_CollisionSolver.cpp
hdk/Solver/Density/: GAS_CF_UpdateDensitySolver.cpp  GAS_CF_UpdateDensitySolver.h
hdk/Utils/: SIM_CL_NoLog.cpp  SIM_CL_NoLog.h
install/cmake/: FindTBB.cmake
install/lib/: CubbyFlow.lib
temp_hdk/: CMakeLists.txt  Entrance.cpp  GAS_CF_ConfigureFLIPData.cpp  GAS_CF_ConfigureFLIPData.h  GAS_CF_FLIPSolver.cpp  GAS_CF_FLIPSolver.h  SIM_CF_FLIPData.cpp  SIM_CF_FLIPData.h  Test-CubbyFlow.hipnc
temp_hdk/FLIP/: GAS_CF_ConfigureFLIPData.cpp  SIM_CF_FLIPData.h
temp_hdk/VDB/: GAS_VDB_TEST.cpp  GAS_VDB_TEST.h
test/: CMakeLists.txt  test_cubbyflow.cpp
(+62 files in other folders)
